--- a/zpq/style.css
+++ b/zpq/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-*{margin: 0;padding: 0}
+body,ul,li{margin: 0;padding: 0}
 body{overflow: hidden;}
 li{list-style: none;}
 img{width: 200px;height: 150px;}
