--- a/xlx/fx/style.css
+++ b/xlx/fx/style.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
 li{list-style: none;}
-*{margin: 0;padding: 0;}
+body,div{margin: 0;padding: 0;}
 #div{width: 100px;height: 100px;background: red;position: absolute;top:0;left: -100px;}
 #div span{width: 20px;height: 50px;background: #ccc;display: inline-block;position: absolute;left: 100px;}
